# Agentic-Framework-Demo

./: .gitignore  README.md  pyproject.toml
AgenticFramework/: 01BasicAgent.md  01BasicAgent.py  02AgentwithInstruction.py  03AgentwithKBVector.py  04AgentwithTool.py  05AgentwithMCP.py  add_data.py  instruction.txt  tools.py
AgenticFramework/documentation/: 01BasicAgent.md  02AgentwithInstruction.md  03AgentwithKBVector.md  04AgentwithTool.md  05AgentwithMCP.md
AgenticFramework/documents/: Pizza Specification Document01.txt  contoso_pizza_amsterdam.md
AgenticFramework/knowledgebase/: Pizza Preparation & Service Protoco.txt  contoso_pizza_boston.md  contoso_pizza_chicago.md  contoso_pizza_delhi.md
shared/: __init__.py  city_utils.py  devui.py  spinner.py
