[project]
name = "aiagentic-framework"
version = "0.1.0"
description = "Progressive Azure AI agent examples using the Azure AI Agents SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Azure AI Agents SDK
    "azure-ai-agents>=1.2.0b5",

    # Azure Authentication
    "azure-identity==1.26.0b2",

    # Utilities
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
]

[tool.uv]
prerelease = "allow"